# GameVoiceService

./: .gitignore  CMakeLists.txt  README.md
emailServe/: CMakeLists.txt
emailServe/include/: EmailServe.hpp  Sender.hpp
emailServe/src/: Sender.cpp
test/: CMakeLists.txt  test.cc
